--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Christopher McGregor</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="imgs/icons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="imgs/icons/favicon-32x32.png" sizes="32x32" type="image/png">
   </head>
   <body>
     <div id="root"></div>
